Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Write your HTML in this file -->
   <ul>
-    <li>One</li>
+    <li>2 slices of bread</li>
     <li>Two</li>
     <li>Three</li>
   </ul>
