--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <li>4 slices of cheese
       <ul>
         <li>cheddar</li>
+        <li>mozarella</li>
+        <li>pepper jack</li>
       </ul>
     </li>
     <li>1 tbsp of butter</li>
   </ul>
+  
+  
 
 </body>
 </html>
