--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <ol>
     <li>Spread butter on bread and frying pan</li>
-    <li>Spread butter on bread and frying pan</li>
+    <li>Place bread in frying pan and fry</li>
     <li>Spread butter on bread and frying pan</li>
     <li>Spread butter on bread and frying pan</li>
     <li>Spread butter on bread and frying pan</li>
