--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <ol>
     <li>Spread butter on bread and frying pan</li>
     <li>Place bread in frying pan and fry</li>
-    <li>Spread butter on bread and frying pan</li>
+    <li>Add cheese on top of bread</li>
     <li>Spread butter on bread and frying pan</li>
     <li>Spread butter on bread and frying pan</li>
   </ol>
